# POC

./: README.md
ProcessData/CSV/: CMakeLists.txt  Data.csv  run.ps1
ProcessData/CSV/Solution/include/: CPUCore.cuh  ColumnData.cuh  Core.cuh  GPUCore.cuh
ProcessData/CSV/Solution/src/: CPUCore.cu  ColumnData.cu  Core.cu  GPUCore.cu  ParseCSV.cu
UnfinishedCode/RFirewall/: CMakeLists.txt  install.ps1
UnfinishedCode/RFirewall/Solution/: NormalizeEncoding.ps1  files.qrc
UnfinishedCode/RFirewall/Solution/controller/include/: Core.h  File.h  LocalMacros.h  Macros.h  Options.h
UnfinishedCode/RFirewall/Solution/controller/include/Enum/: Rule.h  Rules.h
UnfinishedCode/RFirewall/Solution/controller/include/Models/: RulesModel.h
UnfinishedCode/RFirewall/Solution/controller/include/Scanner/: Dataset.h  Rule.h
UnfinishedCode/RFirewall/Solution/controller/src/: Core.cpp  File.cpp  LocalMacros.cpp  Macros.cpp  Options.cpp  main.cpp
UnfinishedCode/RFirewall/Solution/controller/src/Enum/: Rule.cpp  Rules.cpp
UnfinishedCode/RFirewall/Solution/controller/src/Models/: RulesModel.cpp
UnfinishedCode/RFirewall/Solution/controller/src/Scanner/: Dataset.cpp  Rule.cpp
UnfinishedCode/RFirewall/Solution/resource/exe/: pic.rc
UnfinishedCode/RFirewall/Solution/view/: MainWindow.qml  ManageRuleDialog.qml
UnfinishedCode/RFirewall/Solution/view/Backend/: RulesModel.qml  qmldir
UnfinishedCode/RFirewall/Solution/view/Constants/: Constants.qml  qmldir
UnfinishedCode/RFirewall/Solution/view/Mods/: MLabel.qml  qmldir
UnfinishedCode/RFirewall/Solution/view/Support/: NewRuleForm.qml  RulesDelegate.qml  RulesView.qml  SectionDelegate.qml  qmldir
modules/illScrappy/: illScrappy.txt  known_vulns.txt
modules/illScrappy/metasploit-framework/lib/msf/core/: payload_generator.rb
modules/illScrappy/metasploit-framework/modules/encoders/: r3Evolve.rb  salvage.rb
modules/illScrappy/metasploit-framework/modules/encoders/x64/: illScrappy.rb  xaf.rb
modules/illScrappy/metasploit-framework/modules/encoders/x86/: illScrappy.rb
